# mcp_capabilities_checker

./: .gitignore  README.md  pyproject.toml
examples/: example_server.py
mcp_capabilities_checker/: __init__.py  main.py
